# abtop

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md
src/: app.rs  main.rs  setup.rs
src/collector/: claude.rs  codex.rs  cursor.rs  mod.rs  pi.rs  rate_limit.rs
src/model/: session.rs
src/ui/: agents.rs  context.rs  footer.rs  mod.rs  projects.rs  providers.rs  quota.rs  sessions.rs  tokens.rs
